# compaction

./: .coveragerc  .gitattributes  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  CITATION.cff  LICENSE.md  MANIFEST.in  Makefile  NEWS.md  README.md  appveyor.yml  asv.conf.json  compaction.py  environment-dev.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-testing.in  requirements-testing.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  prerelease.yml  release.yml  test.yml
benchmarks/: compaction_bench.py  component_bench.py
compaction/: __init__.py  _cli.py  _compaction.py  _version.py  cli.py  compaction.py  landlab.py
compaction/tests/: test_compaction.py
conda-recipe/: meta.yaml
docs/: conf.py  environment.yml  index.rst
docs/api/: index.rst
docs/install/: index.rst
news/: 16.misc.1  16.misc.2  16.misc.3  16.misc.4  16.misc.5  19.misc  21.misc  23.misc
src/compaction/: __init__.py  __main__.py  _compaction.pyx  _version.py  cli.py  compaction.py  landlab.py
tests/: test_cli.py  test_compaction.py  test_component.py
tests/test_cli/: compact.toml  compaction.toml  config.yaml  porosity.csv
